tests/it/wire/snapshots/it__wire__openai_chat__a_truthful_catalog_refuses_a_document_before_the_codec_does.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "invalid_request",
  "message": "model compat/compat-chat does not support documents",
  "provider": "compat",
  "provider_code": "unsupported_capability",
  "retry": {
    "type": "never"
  }
}
