tests/it/wire/snapshots/it__wire__openai_chat__classifies_a_provider_side_failure.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "server",
  "message": "provider compat The server had an error while processing your request",
  "provider": "compat",
  "status": 500,
  "provider_code": "server_error",
  "retry": {
    "type": "safe"
  },
  "raw_data": {
    "error": {
      "message": "The server had an error while processing your request",
      "type": "server_error",
      "code": null
    }
  }
}
