tests/it/wire/snapshots/it__wire__openai_chat__classifies_a_rejected_credential.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "authentication",
  "message": "provider compat Incorrect API key provided",
  "provider": "compat",
  "provider_code": "invalid_api_key",
  "raw_data": {
    "error": {
      "code": "invalid_api_key",
      "message": "Incorrect API key provided",
      "type": "invalid_request_error"
    }
  },
  "retry": {
    "type": "never"
  },
  "status": 401
}
