tests/it/wire/snapshots/it__wire__openai_chat__classifies_throttling_with_an_http_date_retry_after.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "kind": "rate_limit",
  "message": "provider compat Rate limit reached for requests",
  "provider": "compat",
  "provider_code": "rate_limit_exceeded",
  "provider_retry_after_millis": "[COUNTDOWN]",
  "raw_data": {
    "error": {
      "code": "rate_limit_exceeded",
      "message": "Rate limit reached for requests",
      "type": "rate_limit_error"
    }
  },
  "retry": {
    "after_millis": "[COUNTDOWN]",
    "type": "after"
  },
  "status": 429
}
