tests/it/wire/snapshots/it__wire__openai_chat__encodes_a_json_schema_response_format.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "396"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "user",
        "content": "Give me the city and its population."
      }
    ],
    "stream": false,
    "max_tokens": 128,
    "response_format": {
      "type": "json_schema",
      "json_schema": {
        "name": "city_report",
        "schema": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            },
            "population": {
              "type": "integer"
            }
          },
          "required": [
            "city",
            "population"
          ]
        },
        "strict": true
      }
    }
  }
}
