tests/it/wire/snapshots/it__wire__openai_chat__encodes_a_multi_turn_conversation.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "Keep it short.",
            "type": "text"
          }
        ],
        "role": "system"
      },
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "What is the capital of France?",
            "type": "text"
          }
        ],
        "role": "user"
      },
      {
        "content": "Paris.",
        "role": "assistant"
      },
      {
        "content": "And of Spain?",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2"
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "373"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
